--- a/sqleetcode.ipynb
+++ b/sqleetcode.ipynb
@@ -826,7 +826,10 @@
   {
    "cell_type": "markdown",
    "id": "8c3499e7-86d5-44df-be75-11be65ef1b1b",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "### 511. Game Play Analysis I"
    ]
@@ -918,6 +921,157 @@
    "source": [
     "this is the explanation from GPT concerning the GROUP BY: \n",
     "* GROUP BY player_id: This groups the result by player_id, ensuring that the MIN(event_date) is calculated for each player individually."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f611a81c-210a-4626-bbb6-c544fbf9afde",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "### 577. Employee Bonus"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4e3b7f2c-b571-4062-bd0a-ef0f37c7467b",
+   "metadata": {},
+   "source": [
+    "#### <u>description</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "be586db4-4c16-4e82-bc5f-83fed00e1309",
+   "metadata": {},
+   "source": [
+    "Table: Employee\n",
+    "\n",
+    "    +-------------+---------+\n",
+    "    | Column Name | Type    |\n",
+    "    +-------------+---------+\n",
+    "    | empId       | int     |\n",
+    "    | name        | varchar |\n",
+    "    | supervisor  | int     |\n",
+    "    | salary      | int     |\n",
+    "    +-------------+---------+\n",
+    "\n",
+    "empId is the column with unique values for this table.\n",
+    "Each row of this table indicates the name and the ID of an employee in addition to their salary and the id of their manager.\n",
+    " \n",
+    "\n",
+    "Table: Bonus\n",
+    "\n",
+    "    +-------------+------+\n",
+    "    | Column Name | Type |\n",
+    "    +-------------+------+\n",
+    "    | empId       | int  |\n",
+    "    | bonus       | int  |\n",
+    "    +-------------+------+\n",
+    "\n",
+    "empId is the column of unique values for this table.\n",
+    "empId is a foreign key (reference column) to empId from the Employee table.\n",
+    "Each row of this table contains the id of an employee and their respective bonus.\n",
+    " \n",
+    "\n",
+    "Write a solution to report the name and bonus amount of each employee with a bonus less than 1000."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "598f8047-47ae-4bbc-a40b-e0136e50045c",
+   "metadata": {},
+   "source": [
+    "#### <u>attempts</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6a8ce347-ccf7-4694-b528-9af802ba0645",
+   "metadata": {},
+   "source": [
+    "NOTE: didn't feel like i learned much from this one\n",
+    "\n",
+    "    SELECT t1.name, t2.bonus\n",
+    "    FROM Employee t1\n",
+    "    LEFT JOIN Bonus t2 ON t1.empId = t2.empId\n",
+    "    WHERE t2.bonus < 1000 OR t2.bonus IS NULL\n",
+    "\n",
+    "status = success"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "870981db-7482-43e0-8ac0-0eeeea4ce865",
+   "metadata": {},
+   "source": [
+    "#### <u>solution</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c0b64877-07aa-43c2-8ca2-600b12913233",
+   "metadata": {},
+   "source": [
+    "a solution from leetcode\n",
+    "\n",
+    "    SELECT name, bonus FROM employee\n",
+    "    LEFT JOIN bonus USING(empid)\n",
+    "    WHERE bonus <1000 OR bonus IS NULL"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dc9da5b6-7bc1-4486-9f59-043d93a3c94e",
+   "metadata": {},
+   "source": [
+    "#### <u>notes</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d27e9943-829b-4e3f-95b2-0c5e7c78129d",
+   "metadata": {},
+   "source": [
+    "difference between ON and USING when joining tables:\n",
+    "\n",
+    "1. ON Clause\n",
+    "\n",
+    "The ON clause is used to specify the condition on which two tables should be joined. It is flexible and allows you to join tables on columns that have different names, or even use more complex expressions.\n",
+    "    \n",
+    "syntax:\n",
+    "\n",
+    "    SELECT columns\n",
+    "    FROM table1\n",
+    "    JOIN table2\n",
+    "    ON table1.column = table2.column;\n",
+    "    \n",
+    "2. USING Clause\n",
+    "\n",
+    "The USING clause is used when the columns that are being joined have the same name in both tables. It is a simpler syntax for this specific case.\n",
+    "\n",
+    "syntax:\n",
+    "\n",
+    "    SELECT columns\n",
+    "    FROM table1\n",
+    "    JOIN table2\n",
+    "    USING (column_name);\n",
+    "    \n",
+    "Key Differences:\n",
+    "1. Column Names:\n",
+    "\n",
+    "    * ON can join columns with different names or use more complex conditions.\n",
+    "    * USING requires that the columns being joined have the same name in both tables.\n",
+    "2. Flexibility:\n",
+    "\n",
+    "    * ON is more flexible and can handle complex join conditions, including multiple conditions.\n",
+    "    * USING is simpler but limited to cases where the column names are identical. \n",
+    "3. Resulting Column Names:\n",
+    "\n",
+    "    * When using ON, both joined columns will appear in the result set, typically qualified with their table names.\n",
+    "    * When using USING, the resulting table will only include one instance of the joined column, eliminating redundancy."
    ]
   },
   {
