--- a/sqleetcode.ipynb
+++ b/sqleetcode.ipynb
@@ -1076,6 +1076,115 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a5a588ca-93fa-4880-9b89-2a9ec1023594",
+   "metadata": {},
+   "source": [
+    "### 584. Find Customer Referee"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8b24c955-1bc9-4a79-b06b-63ca60f2de9b",
+   "metadata": {},
+   "source": [
+    "#### <u>description</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6f44b7d2-2932-4db6-8856-3458861c0fa9",
+   "metadata": {},
+   "source": [
+    "Table: Customer\n",
+    "\n",
+    "    +-------------+---------+\n",
+    "    | Column Name | Type    |\n",
+    "    +-------------+---------+\n",
+    "    | id          | int     |\n",
+    "    | name        | varchar |\n",
+    "    | referee_id  | int     |\n",
+    "    +-------------+---------+\n",
+    "In SQL, id is the primary key column for this table.\n",
+    "Each row of this table indicates the id of a customer, their name, and the id of the customer who referred them.\n",
+    " \n",
+    "\n",
+    "Find the names of the customer that are not referred by the customer with id = 2.\n",
+    "\n",
+    "Return the result table in any order."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "30199579-1fe2-4305-81dd-33a03199aa46",
+   "metadata": {},
+   "source": [
+    "#### <u>attempts</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0b2144f8-3649-4f78-adff-c52046a54898",
+   "metadata": {},
+   "source": [
+    "    SELECT name FROM Customer\n",
+    "    WHERE referee_id <> 2 OR referee_id IS NULL\n",
+    "\n",
+    "status = success"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8d0a9f86-46c8-41de-af15-415f37f64a11",
+   "metadata": {},
+   "source": [
+    "#### <u>solutions</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4d768f89-d10a-42b2-ac56-f156054bde37",
+   "metadata": {},
+   "source": [
+    "a solution from leetcode\n",
+    "\n",
+    "    SELECT name\n",
+    "    FROM Customer\n",
+    "    WHERE COALESCE(referee_id,0) <> 2;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ad30f26e-fbc5-4dbb-9cd2-2c4ba4ffc64f",
+   "metadata": {},
+   "source": [
+    "#### <u>notes</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "08b61d2e-6df9-4486-bd6a-c031c3919a97",
+   "metadata": {},
+   "source": [
+    "1. Not Equal Operators\n",
+    "\n",
+    "!= and <> can both act as a \"not equal\" operator\n",
+    "\n",
+    "2. COALESCE\n",
+    "\n",
+    "The COALESCE function in MySQL is used to get the first non-null value from a list of expressions.\n",
+    "\n",
+    "If all the values in the list are evaluated to NULL, then the COALESCE() function returns NULL. The COALESCE() function accepts one parameter, which is the list, which can contain various values\n",
+    "\n",
+    "syntax:\n",
+    "\n",
+    "    COALESCE(value_1, value_2, …., value_n)\n",
+    "    \n",
+    "* COALESCE() can be used to substitute NULL values in table columns with a default value or an expression.\n",
+    "* COALESCE() is more flexible than IFNULL() as it can handle any number of arguments, while IFNULL() only takes two arguments."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7d01b4a7-355f-4546-97b3-78fbdd7d2992",
    "metadata": {
     "jp-MarkdownHeadingCollapsed": true,
