--- a/sqleetcode.ipynb
+++ b/sqleetcode.ipynb
@@ -2,16 +2,31 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "73a0321c-edb6-4bd6-910e-27fe6f75b729",
+   "id": "791c1366-c5d5-428a-9709-b212203a6ecb",
    "metadata": {
     "tags": []
    },
    "source": [
-    "# SQL Leetcode \n",
+    "# NOTES"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d1651f93-4f43-474c-8cf6-9068966077f1",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### general notes\n",
     "\n",
     "this notebook is intended to be used to practice SQL (MySQL) through individual questions, as well as gather notes on common topics, best practices, and any information that is new to me. studying SQL courses does not seem to be very effective for various reasons (slow, repetitive but information doesn't seem to stick, boring); trying this approach instead. will attempt to implement what is learned in projects further down the line. \n",
     "\n",
-    "have not currently found a way to format this notebook nicely, so mostly only using markdown cells. doesn't look great but will do for now"
+    "have not currently found a way to format this notebook nicely, so mostly only using markdown cells. doesn't look great but will do for now\n",
+    "\n",
+    "### study notes\n",
+    "\n",
+    "1. study in more depth aggregations functions (COUNT(), MAX(), AVG(), etc.) and their impact on GROUP BY and ORDER BY clauses\n",
+    "2. might be worth just looking into GROUP BY by itself, to really understand what it does to the data"
    ]
   },
   {
@@ -1077,7 +1092,10 @@
   {
    "cell_type": "markdown",
    "id": "a5a588ca-93fa-4880-9b89-2a9ec1023594",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "### 584. Find Customer Referee"
    ]
@@ -1181,6 +1199,128 @@
     "    \n",
     "* COALESCE() can be used to substitute NULL values in table columns with a default value or an expression.\n",
     "* COALESCE() is more flexible than IFNULL() as it can handle any number of arguments, while IFNULL() only takes two arguments."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d663c8a6-b97a-4d90-940e-9d18a8b2eef7",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "### 586. Customer Placing the Largest Number of Orders"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f1ce6033-1ce2-4f72-a047-cd080b5f5c31",
+   "metadata": {},
+   "source": [
+    "#### <u>description</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f69ac9aa-6d9d-49d8-a06e-0e405d4dccfc",
+   "metadata": {},
+   "source": [
+    "Table: Orders\n",
+    "\n",
+    "    +-----------------+----------+\n",
+    "    | Column Name     | Type     |\n",
+    "    +-----------------+----------+\n",
+    "    | order_number    | int      |\n",
+    "    | customer_number | int      |\n",
+    "    +-----------------+----------+\n",
+    "order_number is the primary key (column with unique values) for this table.\n",
+    "This table contains information about the order ID and the customer ID.\n",
+    " \n",
+    "\n",
+    "Write a solution to find the customer_number for the customer who has placed the largest number of orders.\n",
+    "\n",
+    "The test cases are generated so that exactly one customer will have placed more orders than any other customer."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "072fb5dd-8168-4894-bfa2-549683726232",
+   "metadata": {},
+   "source": [
+    "#### <u>attempts</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "318f5e6b-ab7b-43f5-b3ab-d4350a20a9b6",
+   "metadata": {},
+   "source": [
+    "NOTE: this query gives the right customer_number but comes with an additional unwanted column \"c\", however i can visualize what's happening\n",
+    "\n",
+    "    SELECT customer_number, COUNT(order_number) as c\n",
+    "    FROM Orders\n",
+    "    GROUP BY customer_number\n",
+    "    ORDER BY c DESC LIMIT 1\n",
+    "\n",
+    "status = failure"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2574f586-b796-4308-b72e-39f91e88341e",
+   "metadata": {},
+   "source": [
+    "NOTE: really not entirely sure why this works i.e hard time visualizing what the GROUP BY and ORDER BY does (also didn't know i could use COUNT with the ORDER BY clause). it's also really efficient apparently\n",
+    "\n",
+    "    SELECT customer_number\n",
+    "    FROM Orders\n",
+    "    GROUP BY customer_number\n",
+    "    ORDER BY COUNT(customer_number) DESC LIMIT 1\n",
+    "\n",
+    "status = success"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bc77437b-b751-40a6-924e-412bdb00e40a",
+   "metadata": {},
+   "source": [
+    "#### <u>solutions</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "22517d61-26f6-4236-93f7-912ce2c2b937",
+   "metadata": {},
+   "source": [
+    "from some leetcode solution; almost identical to mine bu the COUNT() is different\n",
+    "\n",
+    "    SELECT customer_number\n",
+    "    FROM orders\n",
+    "    GROUP BY customer_number\n",
+    "    ORDER BY COUNT(*) DESC\n",
+    "    LIMIT 1;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "20ba889c-97d2-4d58-aa4f-94cb77773b5c",
+   "metadata": {},
+   "source": [
+    "#### <u>notes</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "606a2d45-6dfb-4acb-a765-3831f8fd78c0",
+   "metadata": {},
+   "source": [
+    "most solutions has the same answer as me, this is the explanation from one of the solution:\n",
+    "\n",
+    "1. Grouping the orders by customer_number.\n",
+    "2. Counting the number of orders for each customer_number.\n",
+    "3. Ordering the results by the count of orders in descending order.\n",
+    "4. Limiting the output to only the first row, which will contain the customer_number with the highest count of orders."
    ]
   },
   {
