--- a/sqleetcode.ipynb
+++ b/sqleetcode.ipynb
@@ -1205,7 +1205,6 @@
    "cell_type": "markdown",
    "id": "d663c8a6-b97a-4d90-940e-9d18a8b2eef7",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -1321,6 +1320,103 @@
     "2. Counting the number of orders for each customer_number.\n",
     "3. Ordering the results by the count of orders in descending order.\n",
     "4. Limiting the output to only the first row, which will contain the customer_number with the highest count of orders."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "66218c08-424c-4f58-92af-243a229e6432",
+   "metadata": {},
+   "source": [
+    "### 595. Big Countries"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "523f3f6d-c265-4b87-a262-055427e854f7",
+   "metadata": {},
+   "source": [
+    "#### <u>description</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2703a537-1b10-491c-83ef-ea9f0ed0f82b",
+   "metadata": {},
+   "source": [
+    "Table: World\n",
+    "\n",
+    "    +-------------+---------+\n",
+    "    | Column Name | Type    |\n",
+    "    +-------------+---------+\n",
+    "    | name        | varchar |\n",
+    "    | continent   | varchar |\n",
+    "    | area        | int     |\n",
+    "    | population  | int     |\n",
+    "    | gdp         | bigint  |\n",
+    "    +-------------+---------+\n",
+    "    \n",
+    "name is the primary key (column with unique values) for this table.\n",
+    "Each row of this table gives information about the name of a country, the continent to which it belongs, its area, the population, and its GDP value.\n",
+    " \n",
+    "\n",
+    "A country is big if:\n",
+    "\n",
+    "it has an area of at least three million (i.e., 3000000 km2), or\n",
+    "it has a population of at least twenty-five million (i.e., 25000000).\n",
+    "Write a solution to find the name, population, and area of the big countries.\n",
+    "\n",
+    "Return the result table in any order."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "64dd11ae-0376-427b-a6a9-c0bf7351b036",
+   "metadata": {},
+   "source": [
+    "#### <u>attempts</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5687ec42-fbc5-406d-999b-eed6e8327fa8",
+   "metadata": {},
+   "source": [
+    "    SELECT name, population, area FROM World\n",
+    "    WHERE area >= 3000000 OR population >=  25000000\n",
+    "\n",
+    "status = success"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "860c48d9-442d-40a4-929f-58e6158eeafc",
+   "metadata": {},
+   "source": [
+    "#### <u>solutions</u>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2b9830d7-1542-4c51-8192-ae6daf34864f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "88cc7b4a-228b-4e82-8c61-987c25dee8b9",
+   "metadata": {},
+   "source": [
+    "#### <u>notes</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5bf3c37b-5d2b-4934-9039-6f39ffa1916f",
+   "metadata": {},
+   "source": [
+    "this problem is extremely straightforward"
    ]
   },
   {
