--- a/sqleetcode.ipynb
+++ b/sqleetcode.ipynb
@@ -1205,6 +1205,7 @@
    "cell_type": "markdown",
    "id": "d663c8a6-b97a-4d90-940e-9d18a8b2eef7",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -1325,7 +1326,10 @@
   {
    "cell_type": "markdown",
    "id": "66218c08-424c-4f58-92af-243a229e6432",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "### 595. Big Countries"
    ]
@@ -1417,6 +1421,102 @@
    "metadata": {},
    "source": [
     "this problem is extremely straightforward"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ab88eafa-7374-4adb-9777-2bc5d8db205e",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### 596. Classes More than 5 Students"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d85c5170-c4f6-448b-96c4-8bff281be20a",
+   "metadata": {},
+   "source": [
+    "#### <u>description</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "09675afb-ee67-4d0a-92ef-65d16d7f35d5",
+   "metadata": {},
+   "source": [
+    "Table: Courses\n",
+    "\n",
+    "    +-------------+---------+\n",
+    "    | Column Name | Type    |\n",
+    "    +-------------+---------+\n",
+    "    | student     | varchar |\n",
+    "    | class       | varchar |\n",
+    "    +-------------+---------+\n",
+    "(student, class) is the primary key (combination of columns with unique values) for this table.\n",
+    "Each row of this table indicates the name of a student and the class in which they are enrolled.\n",
+    " \n",
+    "\n",
+    "Write a solution to find all the classes that have at least five students.\n",
+    "\n",
+    "Return the result table in any order."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e94555e3-92ab-4487-9c01-7dd793dc2380",
+   "metadata": {},
+   "source": [
+    "#### <u>attempts</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c5992028-fc4b-4fce-bec6-2527c2028457",
+   "metadata": {},
+   "source": [
+    "    SELECT class FROM Courses\n",
+    "    GROUP BY class\n",
+    "    HAVING COUNT(class) >= 5\n",
+    "\n",
+    "status = success"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "80e58b46-e876-4eaa-9da3-9ba018fe82fa",
+   "metadata": {},
+   "source": [
+    "#### <u>solutions</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "506f4b97-c8fa-4b9c-8089-db385289a82e",
+   "metadata": {},
+   "source": [
+    "this also works, perhaps a bit more intuitive\n",
+    "\n",
+    "    SELECT class FROM Courses\n",
+    "    GROUP BY class\n",
+    "    HAVING COUNT(student) >= 5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "46afb362-653d-4ac2-9a1b-17222b82084a",
+   "metadata": {},
+   "source": [
+    "#### <u>notes</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9cdd2332-49d3-4954-a4cb-b8bcd8de9685",
+   "metadata": {},
+   "source": [
+    "another extremely straightforward problem"
    ]
   },
   {
