--- a/sqleetcode.ipynb
+++ b/sqleetcode.ipynb
@@ -23,6 +23,11 @@
     "\n",
     "have not currently found a way to format this notebook nicely, so mostly only using markdown cells. doesn't look great but will do for now\n",
     "\n",
+    "1. problems denoted by * proved to be quite challenging for me upon first attempt\n",
+    "2. problems denoted by ** are exceedingly challenging and will require a lot of revision\n",
+    "3. problems denoted by @ remain incomplete\n",
+    "4. in leetcode, problems with notes in green are first attempts/solutions or reworks after failure. those with notes in blue are review\n",
+    "\n",
     "### study notes\n",
     "\n",
     "1. study in more depth aggregations functions (COUNT(), MAX(), AVG(), etc.) and their impact on GROUP BY and ORDER BY clauses\n",
@@ -1427,6 +1432,7 @@
    "cell_type": "markdown",
    "id": "ab88eafa-7374-4adb-9777-2bc5d8db205e",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -1517,6 +1523,153 @@
    "metadata": {},
    "source": [
     "another extremely straightforward problem"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0a10aca5-05a2-4ed7-9e8d-46e040c9994a",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "### 607. Sales Person"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9689be42-1ff5-4699-b437-28fb20c51000",
+   "metadata": {},
+   "source": [
+    "#### <u>description</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fab142d7-86e3-4f40-b9d1-cf558cfbd9d7",
+   "metadata": {},
+   "source": [
+    "Table: SalesPerson\n",
+    "\n",
+    "    +-----------------+---------+\n",
+    "    | Column Name     | Type    |\n",
+    "    +-----------------+---------+\n",
+    "    | sales_id        | int     |\n",
+    "    | name            | varchar |\n",
+    "    | salary          | int     |\n",
+    "    | commission_rate | int     |\n",
+    "    | hire_date       | date    |\n",
+    "    +-----------------+---------+\n",
+    "sales_id is the primary key (column with unique values) for this table.\n",
+    "Each row of this table indicates the name and the ID of a salesperson alongside their salary, commission rate, and hire date.\n",
+    " \n",
+    "\n",
+    "Table: Company\n",
+    "\n",
+    "    +-------------+---------+\n",
+    "    | Column Name | Type    |\n",
+    "    +-------------+---------+\n",
+    "    | com_id      | int     |\n",
+    "    | name        | varchar |\n",
+    "    | city        | varchar |\n",
+    "    +-------------+---------+\n",
+    "com_id is the primary key (column with unique values) for this table.\n",
+    "Each row of this table indicates the name and the ID of a company and the city in which the company is located.\n",
+    " \n",
+    "\n",
+    "Table: Orders\n",
+    "\n",
+    "    +-------------+------+\n",
+    "    | Column Name | Type |\n",
+    "    +-------------+------+\n",
+    "    | order_id    | int  |\n",
+    "    | order_date  | date |\n",
+    "    | com_id      | int  |\n",
+    "    | sales_id    | int  |\n",
+    "    | amount      | int  |\n",
+    "    +-------------+------+\n",
+    "order_id is the primary key (column with unique values) for this table.\n",
+    "com_id is a foreign key (reference column) to com_id from the Company table.\n",
+    "sales_id is a foreign key (reference column) to sales_id from the SalesPerson table.\n",
+    "Each row of this table contains information about one order. This includes the ID of the company, the ID of the salesperson, the date of the order, and the amount paid.\n",
+    " \n",
+    "\n",
+    "Write a solution to find the names of all the salespersons who did not have any orders related to the company with the name \"RED\".\n",
+    "\n",
+    "Return the result table in any order."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "afa01ed5-cddd-4a0a-8deb-84dfe0cf7a88",
+   "metadata": {},
+   "source": [
+    "#### <u>attempts</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e56b705f-e935-4e40-8fee-a93d42bb5d5a",
+   "metadata": {},
+   "source": [
+    "NOTE: this really feels like it should work but the output is plain wrong\n",
+    "\n",
+    "    SELECT sales.name FROM SalesPerson sales\n",
+    "    JOIN Orders orders ON orders.sales_id = sales.sales_id\n",
+    "    JOIN Company company ON orders.com_id = company.com_id\n",
+    "    WHERE company.name <> \"RED\"\n",
+    "    \n",
+    "status = failure"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3607b685-66d5-4bcf-abd6-8f12cbeec5cd",
+   "metadata": {},
+   "source": [
+    "NOTE: above was definitely incorrect, below works\n",
+    "\n",
+    "    SELECT name FROM SalesPerson\n",
+    "    WHERE sales_id NOT IN (\n",
+    "        SELECT sales.sales_id FROM Orders orders\n",
+    "        JOIN Company company ON orders.com_id = company.com_id\n",
+    "        JOIN SalesPerson sales ON orders.sales_id = sales.sales_id\n",
+    "        WHERE company.name = \"RED\"\n",
+    "    )\n",
+    "\n",
+    "status = success"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "433671fb-f03f-4e37-b47a-e67d3e977990",
+   "metadata": {},
+   "source": [
+    "#### <u>solutions</u>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e98b2673-c8f0-4513-b5b4-972d2f73c3a8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3a409461-380d-4df5-954a-15689bd929e1",
+   "metadata": {},
+   "source": [
+    "#### <u>notes</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fa5d865c-37df-47a0-ba9d-5eafffc21798",
+   "metadata": {},
+   "source": [
+    "the solutions are all some variation of what i wrote, so nothing new to add. however i struggled a bit with this problem; i still seem to have a hard time visualizing the output tables after performing operations on them"
    ]
   },
   {
