--- a/sqleetcode.ipynb
+++ b/sqleetcode.ipynb
@@ -1674,6 +1674,104 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7fe6b26b-5cc6-4235-952d-ce17311b807e",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "### 610. Triangle Judgement"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3c7550ac-34ce-4712-8033-cb03b7b77150",
+   "metadata": {},
+   "source": [
+    "#### <u>description</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0421b7f1-f346-44ff-b76e-763ee2ea1b6b",
+   "metadata": {},
+   "source": [
+    "    +-------------+------+\n",
+    "    | Column Name | Type |\n",
+    "    +-------------+------+\n",
+    "    | x           | int  |\n",
+    "    | y           | int  |\n",
+    "    | z           | int  |\n",
+    "    +-------------+------+\n",
+    "In SQL, (x, y, z) is the primary key column for this table.\n",
+    "Each row of this table contains the lengths of three line segments.\n",
+    "\n",
+    "Report for every three line segments whether they can form a triangle.\n",
+    "\n",
+    "Return the result table in any order."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e490da1c-c300-4556-91f5-cc3ae3e67c99",
+   "metadata": {},
+   "source": [
+    "#### <u>attempts</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6db25b40-2151-4efa-a059-c1f1d432e940",
+   "metadata": {},
+   "source": [
+    "didn't really bother with this one, didn't seem so much to be about SQL but rather geometry..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "03deec92-a28d-4f26-a9f0-caf92aa57dcf",
+   "metadata": {},
+   "source": [
+    "#### <u>solutions</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c4ff13af-aae2-41de-866d-a939757aba78",
+   "metadata": {},
+   "source": [
+    "from some leetcode solution\n",
+    "\n",
+    "    SELECT *, IF(x+y>z AND y+z>x AND z+x>y, \"Yes\", \"No\") as triangle\n",
+    "    FROM Triangle"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "84d19b40-9c1d-4ec1-878c-0d3dea68aed9",
+   "metadata": {},
+   "source": [
+    "#### <u>notes</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "df8128db-7083-48dc-a29c-3197e35f8174",
+   "metadata": {},
+   "source": [
+    "new function used here, IF()\n",
+    "\n",
+    "1. IF\n",
+    "\n",
+    "The IF() function returns a value if a condition is TRUE, or another value if a condition is FALSE.\n",
+    "\n",
+    "syntax:\n",
+    "\n",
+    "    IF(condition, value_if_true, value_if_false)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7d01b4a7-355f-4546-97b3-78fbdd7d2992",
    "metadata": {
     "jp-MarkdownHeadingCollapsed": true,
