--- a/sqleetcode.ipynb
+++ b/sqleetcode.ipynb
@@ -1772,6 +1772,121 @@
   },
   {
    "cell_type": "markdown",
+   "id": "89c46bd8-d84a-4885-bf02-3a30c05faa44",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "### 619. Biggest Single Number"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7746e787-86d1-4ab7-a58a-a290cba8a798",
+   "metadata": {},
+   "source": [
+    "#### <u>description</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4992749c-345b-4091-96b5-e6ecbdc0ca66",
+   "metadata": {},
+   "source": [
+    "Table: MyNumbers\n",
+    "\n",
+    "    +-------------+------+\n",
+    "    | Column Name | Type |\n",
+    "    +-------------+------+\n",
+    "    | num         | int  |\n",
+    "    +-------------+------+\n",
+    "This table may contain duplicates (In other words, there is no primary key for this table in SQL).\n",
+    "Each row of this table contains an integer.\n",
+    " \n",
+    "\n",
+    "A single number is a number that appeared only once in the MyNumbers table.\n",
+    "\n",
+    "Find the largest single number. If there is no single number, report null."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "08f1ef02-d329-4340-a932-f9120909fb3e",
+   "metadata": {},
+   "source": [
+    "#### <u>attempts</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "519f7624-5409-43ab-8c59-73ef8a5899bf",
+   "metadata": {},
+   "source": [
+    "    SELECT MAX(num) AS num FROM (\n",
+    "        SELECT * FROM MyNumbers\n",
+    "        GROUP BY num\n",
+    "        HAVING COUNT(num) = 1\n",
+    "    ) AS sub\n",
+    "\n",
+    "status = success"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "06515bb2-0784-4ec1-a99f-30aeec1f824c",
+   "metadata": {},
+   "source": [
+    "#### <u>solutions</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d4d10617-54e8-4b85-a580-1258fa9f73cb",
+   "metadata": {},
+   "source": [
+    "solution from a leetcode thread, uses sorting instead of subquery\n",
+    "\n",
+    "    SELECT IF(COUNT(num) =1, num, null) AS num          # if the number appears exactly once, it is returned, otherwise null is returned\n",
+    "    FROM MyNumbers \n",
+    "    GROUP BY num                                        # groups the rows by the 'num' column. each group contains all rows with the same 'num' value\n",
+    "    ORDER BY COUNT(num), num DESC                       # this clause sorts results first by the count of each 'num' in asc order, then by 'num in desc order\n",
+    "                                                        # ensures that 1. numbers that appear once are at the top, 2. among those, the largest numbers appears first\n",
+    "    LIMIT 1;                                            # picks the top number \n",
+    "    \n",
+    "NOTE: not as fast apparently. also a bit confusing since the original column and the new one are both named num, i assume the group and order is done on the new column. also not entirely sure if GPT's explanation is correct or if there is something about sql's order of operation i still don't fundamentally understand...\n",
+    "\n",
+    "explanation: The query groups the table by each number, counts the occurrences, and uses the IF function to either select the number (if it appears exactly once) or null. It then sorts the results such that numbers that appear exactly once are prioritized and, among those, the largest number comes first. Finally, it selects the top result."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c30bb0fd-c6f5-4c61-afdc-69ea1b36af73",
+   "metadata": {},
+   "source": [
+    "#### <u>notes</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "69c57358-e25b-4376-9fa7-b4b4e0e56c00",
+   "metadata": {},
+   "source": [
+    "initially wrote \n",
+    "\n",
+    "    SELECT MAX(num) AS num FROM (\n",
+    "        SELECT * FROM MyNumbers\n",
+    "        GROUP BY num\n",
+    "        HAVING COUNT(num) = 1\n",
+    "    )\n",
+    "\n",
+    "but this query failed. the subquery (derived table) in this case must have a name, hence the AS sub (simply putting sub next to the ending paranthesis also works)\n",
+    "\n",
+    "i also initialy though that my corrected query wouldn't work, that i had to write a condition in the event that there were no single numbers but that is not the case. SELECT will return null if the subquery is empty due to there being no single numbers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7d01b4a7-355f-4546-97b3-78fbdd7d2992",
    "metadata": {
     "jp-MarkdownHeadingCollapsed": true,
