--- a/sqleetcode.ipynb
+++ b/sqleetcode.ipynb
@@ -1774,7 +1774,6 @@
    "cell_type": "markdown",
    "id": "89c46bd8-d84a-4885-bf02-3a30c05faa44",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -1883,6 +1882,101 @@
     "but this query failed. the subquery (derived table) in this case must have a name, hence the AS sub (simply putting sub next to the ending paranthesis also works)\n",
     "\n",
     "i also initialy though that my corrected query wouldn't work, that i had to write a condition in the event that there were no single numbers but that is not the case. SELECT will return null if the subquery is empty due to there being no single numbers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e7429022-34b6-4de2-8e34-87b8030ae805",
+   "metadata": {},
+   "source": [
+    "### 620. Not Boring Movies"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8bdb70bf-6934-40cc-8ce7-c77afdae14f2",
+   "metadata": {},
+   "source": [
+    "#### <u>description</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "77c33d19-bf33-4555-bc65-7c3e1dedfe1c",
+   "metadata": {},
+   "source": [
+    "Table: Cinema\n",
+    "\n",
+    "    +----------------+----------+\n",
+    "    | Column Name    | Type     |\n",
+    "    +----------------+----------+\n",
+    "    | id             | int      |\n",
+    "    | movie          | varchar  |\n",
+    "    | description    | varchar  |\n",
+    "    | rating         | float    |\n",
+    "    +----------------+----------+\n",
+    "id is the primary key (column with unique values) for this table.\n",
+    "Each row contains information about the name of a movie, its genre, and its rating.\n",
+    "rating is a 2 decimal places float in the range [0, 10]\n",
+    " \n",
+    "\n",
+    "Write a solution to report the movies with an odd-numbered ID and a description that is not \"boring\".\n",
+    "\n",
+    "Return the result table ordered by rating in descending order."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f3b785ed-4988-4715-a46f-451bb28f40f1",
+   "metadata": {},
+   "source": [
+    "#### <u>attempts</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "577973aa-421f-41eb-a5c1-7f346fcd5db9",
+   "metadata": {},
+   "source": [
+    "    SELECT * FROM Cinema\n",
+    "    WHERE MOD(id,2)=1 AND description <> 'boring'\n",
+    "    ORDER BY rating DESC\n",
+    "\n",
+    "status = success"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a3004329-0256-4cc1-af05-4ed546e84918",
+   "metadata": {},
+   "source": [
+    "#### <u>solutions</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ed0ebbae-68fd-46e5-a893-e5e96c8e5ae8",
+   "metadata": {},
+   "source": [
+    "just about every top solutions are the exact same as my query"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "89820766-a305-4362-aded-f07592850fcf",
+   "metadata": {},
+   "source": [
+    "#### <u>notes</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bfc0a33c-c59a-4244-9872-aa6a03e6321e",
+   "metadata": {},
+   "source": [
+    "in the WHERE clause in my attempt, it is possible to use the modulus operator instead of the function as well. so writing this also works:\n",
+    "\n",
+    "    WHERE id % 2 = 1 AND description <> 'boring'"
    ]
   },
   {
